--- a/src/main/resources/templates/queued-list.html
+++ b/src/main/resources/templates/queued-list.html
@@ -2,7 +2,7 @@
 
 <html lang="sv" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Utskick</title>
+    <title>Köade utskick</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -32,6 +32,54 @@
 </head>
 
 <body>
+<div class="modal fade" id="removeListModal" tabindex="-1" aria-labelledby="removeListModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <form class="tab-pane fade show active" th:action="@{/user/removelist}" method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title">Ta bort utskick</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="mb-0" id="removeNameText">
+                        Ta bort
+                    </p>
+                </div>
+                <input type="text" name="id" id="listId" style="display: none">
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light border btn-sm" data-bs-dismiss="modal">Avbryt</button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Ta bort
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="completeListModal" tabindex="-1" aria-labelledby="completeListModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <form class="tab-pane fade show active" th:action="@{/user/mark-complete}" method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title">Markera som färdig</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="mb-0" id="completeNameText">
+                        Ta bort
+                    </p>
+                </div>
+                <input type="text" name="id" id="completeListId" style="display: none">
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light border btn-sm" data-bs-dismiss="modal">Avbryt</button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Verkställ
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="settingsModal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -135,89 +183,57 @@
     </div>
 </header>
 <div class="container">
-    <div class="d-flex">
-        <div class="w-100">
-            <form th:action="@{/user/upload-list/complete}" method="post">
-                <div class="px-lg-4 px-sm-3 px-2 py-lg-5 py-sm-4 py-5">
-                    <div class="mb-3">
-                        <label class="form-label" for="dispatchName">Namn på utskick</label>
-                        <input name="name" id="dispatchName" th:value="${name}" required class="form-control" type="text">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label" for="dateInput">Startdatum för utskick</label>
-                        <input name="date" id="dateInput" required class="form-control" type="date">
-                    </div>
-                    <div class="mb-3 d-flex flex-wrap">
-                        <label class="form-label me-3" for="variable">Tillgängliga variabler:</label>
-                        <p id="variable" style="font-size: 0.875rem" class="me-2" th:each="header : ${headers}" th:text="'{' + ${header.name} + '}'"></p>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-6">
-                            <label>Titel</label>
-                            <input name="title" oninput="mirrorText(this)" required class="w-100 form-control" type="text">
-                        </div>
-                        <div class="col-xl-6">
-                            <label>Mottagaren ser (exempelvärde från uppladdad fil)</label>
-                            <input readonly class="w-100 form-control" type="text">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-6">
-                            <label>Huvud innehåll</label>
-                            <textarea oninput="mirrorText(this)" required name="mainContent" class="w-100" cols="30" rows="10">...</textarea>
-                        </div>
-                        <div class="col-xl-6">
-                            <label></label>
-                            <div class="w-100">...</div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-6">
-                            <label>Footer innehåll</label>
-                            <textarea oninput="mirrorText(this)" required name="footerContent" class="w-100" cols="30" rows="10">...</textarea>
-                        </div>
-                        <div class="col-xl-6">
-                            <label></label>
-                            <div class="w-100">...</div>
-                        </div>
-                    </div>
-                    <!--This is to add a sequence placeholder-->
-                    <div class="addSequenceDiv"></div>
-                    <div class="mb-3 d-flex flex-wrap">
-                        <button class="btn btn-info btn-sm me-2" type="button" id="addSequence">Lägg till sekvens</button>
-                        <button class="btn btn-success btn-sm" type="submit">Ladda upp utskick</button>
-                    </div>
-                </div>
-                <textarea type="text" name="completeData" style="display: none" th:utext="${completeData}"></textarea>
-            </form>
-        </div>
-    </div>
-    <div class="sequence" style="display: none">
-        <hr class="mt-3 mb-3" style="border: none;height: 3px;background-color: #5e5e5e;">
-        <label>Sekvens</label>
-        <div class="row mb-3">
-            <div class="col-xl-6">
-                <input name="titleSequence[]" oninput="mirrorTextSequence(this)" required class="w-100 form-control" type="text">
-            </div>
-            <div class="col-xl-6">
-                <input readonly class="w-100 form-control" type="text">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xl-6">
-                <textarea oninput="mirrorTextSequence(this)" required name="sequenceContent[]" class="w-100" cols="30" rows="10">...</textarea>
-            </div>
-            <div class="col-xl-6">
-                <div class="w-100">...</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <label>Sekvens startdatum (utan svar från första utskick)</label>
-                <input name="sequenceAfter[]" required class="form-control" type="date">
-            </div>
-            <div class="col-md-6 mb-3 d-flex align-items-end">
-                <button class="btn btn-danger btn-sm mt-4" onclick="removeSequence(this)">Ta bort sekvens</button>
+    <div class="w-100">
+        <div class="px-lg-4 px-sm-3 px-2 py-lg-5 py-sm-4 py-3">
+            <div class="tableSearch">
+                <table class="table fs-sm">
+                    <thead>
+                    <tr class="d-none d-lg-table-row">
+                        <th>Namn</th>
+                        <th>Datum för utskick</th>
+                        <th>Pågående</th>
+                        <th class="text-end">Handlingar</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="queuedList : ${queuedLists}">
+                        <td class="pe-1" th:text="${queuedList.fileName}">
+                        </td>
+                        <td class="d-none d-lg-table-cell">
+                                    <span class="badge shadow-sm border bg-secondary text-body">
+                                        <span th:text="${queuedList.dispatchDate}">johannes.eriksson@gmail.com</span>
+                                    </span>
+                        </td>
+                        <td class="d-none d-lg-table-cell">
+                            <i th:if="${queuedList.ongoing}" data-bs-toggle="tooltip" data-bs-placement="top" title="Utskicket är pågående och skickar till samtliga kontakter" class="bx bxs-check-circle fs-lg text-success me-1"></i>
+                            <i th:if="${!queuedList.ongoing}" data-bs-toggle="tooltip" data-bs-placement="top" title="Utskicket väntar på att startdatum för utskick ska nås" class="bx bxs-x-circle fs-lg text-warning me-1"></i>
+                        </td>
+                        <td class="px-0" style="max-width: fit-content !important;">
+                            <div class="d-flex justify-content-end gap-1 pe-2">
+                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Redigera">
+                                    <a th:href="'/user/redigera-utskick/' + ${queuedList.id}"><i class="bx bxs-edit p-1" style="font-size: 0.9rem" th:data-listid="${queuedList.id}"></i></a>
+                                </button>
+                                <div class="border-start d-lg-none"></div>
+                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Ladda ner som CSV">
+                                    <a th:href="'/user/ladda-ner-utskick/' + ${queuedList.id}"><i class="bx bxs-download p-1" style="font-size: 0.9rem" th:data-listid="${queuedList.id}"></i></a>
+                                </button>
+                                <div class="border-start d-lg-none"></div>
+                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Skicka ett test mejl till mig själv">
+                                    <a th:href="'/user/test-mejl/' + ${queuedList.id}"><i class="bx bxs-envelope p-1" style="font-size: 0.9rem" th:data-listid="${queuedList.id}"></i></a>
+                                </button>
+                                <div class="border-start d-lg-none"></div>
+                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Markera som färdig">
+                                    <i class="bx bx-check p-1" style="font-size: 0.9rem " th:data-listid="${queuedList.id}" th:data-listname="${queuedList.fileName}" data-bs-toggle="modal" data-bs-target="#completeListModal"></i>
+                                </button>
+                                <div class="border-start d-lg-none"></div>
+                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Radera utskick">
+                                    <i class="bx bx-x p-1" style="font-size: 0.9rem " th:data-listid="${queuedList.id}" th:data-listname="${queuedList.fileName}" data-bs-toggle="modal" data-bs-target="#removeListModal"></i>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -226,79 +242,34 @@
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <!-- Scripts -->
 <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="/js/theme.min.js"></script>
 <script src="/js/main.js"></script>
-
 <script>
-    //Set todays date
-    var date = new Date();
-    var day = String(date.getDate()).padStart(2, '0');
-    var month = String(date.getMonth() + 1).padStart(2, '0'); //January is 0!
-    var year = date.getFullYear();
+    $('#removeListModal').on('show.bs.modal', function(e) {
 
-    var today = year + '-' + month + '-' + day;
+        let id = $(e.relatedTarget).data('listid');
+        let name = $(e.relatedTarget).data('listname');
+        document.getElementById("removeNameText").textContent = "Ta bort '" + name + "'?"
+        document.getElementById("listId").value = id
 
-    document.getElementById('dateInput').value = today;
-</script>
-
-<script th:inline="javascript">
-    //Load the json values
-    var headers = /*[[${#strings.arrayJoin(headersJson, ',')}]]*/ 'default';
-    var firstRow = /*[[${#strings.arrayJoin(firstRowJson, ',')}]]*/ 'default';
-
-    //Create list
-    headers = JSON.parse("[" + headers + "]");
-    firstRow = JSON.parse("[" + firstRow + "]");
-
-    function mirrorText(e){
-        let text = e.value
-        let sibling = e.parentElement.nextElementSibling.firstElementChild.nextElementSibling
-
-        for(let i = 0; i<headers.length;i++){
-            var pattern = "{" + headers[i].name + "}";
-            var regex = new RegExp(pattern, 'g');
-            text = text.replace(regex, firstRow[i].name);
-        }
-        if(sibling.tagName == "DIV"){
-            let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
-            sibling.innerHTML = htmlText;
-        }
-        else{
-            sibling.value = text;
-        }
-    }
-    function mirrorTextSequence(e){
-        let text = e.value
-        let sibling = e.parentElement.nextElementSibling.firstElementChild
-
-        for(let i = 0; i<headers.length;i++){
-            var pattern = "{" + headers[i].name + "}";
-            var regex = new RegExp(pattern, 'g');
-            text = text.replace(regex, firstRow[i].name);
-        }
-        if(sibling.tagName == "DIV"){
-            let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
-            sibling.innerHTML = htmlText;
-        }
-        else{
-            sibling.value = text;
-        }
-    }
-    function removeSequence(e){
-        e.parentElement.parentElement.parentElement.remove();
-    }
-    const newSequence = document.getElementById('addSequence');
-    newSequence.addEventListener('click', function() {
-        if(document.getElementsByClassName("insertedSequence").length>0){
-            console.log("hasSequence")
-            $(".sequence:last").clone().insertAfter("div.insertedSequence:last").css({"display": ""}).addClass("insertedSequence");
-        }
-        else{
-            console.log("no sequence")
-            $(".sequence:last").clone().insertAfter("div.addSequenceDiv").css({"display": ""}).addClass("insertedSequence");
-        }
     });
+    $('#completeListModal').on('show.bs.modal', function(e) {
 
+        let id = $(e.relatedTarget).data('listid');
+        let name = $(e.relatedTarget).data('listname');
+        document.getElementById("completeNameText").textContent = "Markera utskick '" + name + "' som färdig?"
+        document.getElementById("completeListId").value = id
+
+    });
+</script>
+<script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+</script>
+<script>
     document.getElementById('file').addEventListener('change', function(e) {
         var fileNameByInput = e.target.files[0].name;
         var fileName = document.getElementById("name").value
@@ -306,6 +277,12 @@
             document.getElementById("name").value = fileNameByInput
         }
     });
+</script>
+<script th:if="${uploaded==true}">
+    alert("Lista uppladdad")
+</script>
+<script th:if="${hasError==false}">
+    alert("settings updated")
 </script>
 </body>
 </html>
