--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -273,7 +273,7 @@
     });
   </script>
   <script th:if="${uploaded==true}">
-    alert("Lista uppladdad")
+    alert("Listan laddas upp och bör vara synlig inom 5 minuter")
   </script>
   <script th:if="${hasError==false}">
     alert("settings updated")
