--- a/src/main/resources/templates/edit-list.html
+++ b/src/main/resources/templates/edit-list.html
@@ -188,7 +188,7 @@
                         <label>Sekvens</label>
                         <div class="row mb-3">
                             <div class="col-xl-6">
-                                <input name="titleSequence[]" th:value="${sequence.mainContent}" oninput="mirrorTextSequence(this)" required class="w-100 form-control" type="text">
+                                <input name="titleSequence[]" th:value="${sequence.title}" oninput="mirrorTextSequence(this)" required class="w-100 form-control" type="text">
                             </div>
                             <div class="col-xl-6">
                                 <input readonly class="w-100 form-control" type="text">
