--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -58,10 +58,6 @@
               <label for="port" class="form-label">Port</label>
               <input required name="port" id="port" type="text" th:value="${user.mailPort}" class="form-control" placeholder="587">
             </div>
-            <div class="mb-3">
-              <label for="port" class="form-label">Interval (sekunder)</label>
-              <input required name="interval" id="interval" type="number" th:value="${user.intervalPeriod}" class="form-control" placeholder="587">
-            </div>
             <div class="d-flex justify-content-end gap-2">
               <button type="button" class="btn btn-light border btn-sm" data-bs-dismiss="modal">Avbryt</button>
               <button type="submit" class="btn btn-primary btn-sm">
@@ -273,10 +269,13 @@
     });
   </script>
   <script th:if="${uploaded==true}">
-    alert("Listan laddas upp och bör vara synlig inom 5 minuter")
+    alert("Listan laddas upp och bör vara synlig inom 5 minuter.")
   </script>
   <script th:if="${hasError==false}">
-    alert("settings updated")
+    alert("Uppdateringen av dina inställningar lyckades.")
+  </script>
+  <script th:if="${hasError==true}">
+    alert("Kunde inte uppdatera. Angivna Epost uppgifter stämmer inte.")
   </script>
   </body>
 </html>
