--- a/src/main/resources/templates/edit-list.html
+++ b/src/main/resources/templates/edit-list.html
@@ -58,10 +58,6 @@
                         <label for="port" class="form-label">Port</label>
                         <input required name="port" id="port" type="text" th:value="${user.mailPort}" class="form-control" placeholder="587">
                     </div>
-                    <div class="mb-3">
-                        <label for="port" class="form-label">Interval (sekunder)</label>
-                        <input required name="interval" id="interval" type="number" th:value="${user.intervalPeriod}" class="form-control" placeholder="587">
-                    </div>
                     <div class="d-flex justify-content-end gap-2">
                         <button type="button" class="btn btn-light border btn-sm" data-bs-dismiss="modal">Avbryt</button>
                         <button type="submit" class="btn btn-primary btn-sm">
@@ -147,6 +143,10 @@
                         <label class="form-label" for="dateInput">Startdatum för utskick</label>
                         <input name="date" th:value="${mailList.dispatchDate}" id="dateInput" required class="form-control" type="date">
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="interval">Interval (ms)</label>
+                        <input name="interval" id="interval" th:value="${mailList.intervalPeriod}" required class="form-control" type="number">
+                    </div>
                     <div class="mb-3 d-flex flex-wrap">
                         <label class="form-label me-3" for="variable">Tillgängliga variabler:</label>
                         <p id="variable" style="font-size: 0.875rem" class="me-2" th:each="header : ${headers}" th:text="'{' + ${header.name} + '}'"></p>
@@ -164,21 +164,21 @@
                     <div class="row">
                         <div class="col-xl-6">
                             <label>Huvud innehåll</label>
-                            <textarea th:utext="${mailList.mainContent}" oninput="mirrorText(this)" required name="mainContent" class="w-100" cols="30" rows="10">...</textarea>
+                            <textarea th:utext="${mailList.mainContent}" oninput="mirrorText(this)" required name="mainContent" class="w-100" cols="30" rows="10"></textarea>
                         </div>
                         <div class="col-xl-6">
                             <label></label>
-                            <div class="w-100">...</div>
+                            <div class="w-100"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xl-6">
                             <label>Footer innehåll</label>
-                            <textarea th:utext="${mailList.footerContent}" oninput="mirrorText(this)" required name="footerContent" class="w-100" cols="30" rows="10">...</textarea>
+                            <textarea th:utext="${mailList.footerContent}" oninput="mirrorText(this)" required name="footerContent" class="w-100" cols="30" rows="10"></textarea>
                         </div>
                         <div class="col-xl-6">
                             <label></label>
-                            <div class="w-100">...</div>
+                            <div class="w-100"></div>
                         </div>
                     </div>
                     <!--This is to add a sequence placeholder-->
@@ -196,10 +196,10 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-6">
-                                <textarea th:utext="${sequence.mainContent}" oninput="mirrorTextSequence(this)" required name="sequenceContent[]" class="w-100" cols="30" rows="10">...</textarea>
+                                <textarea th:utext="${sequence.mainContent}" oninput="mirrorTextSequence(this)" required name="sequenceContent[]" class="w-100" cols="30" rows="10"></textarea>
                             </div>
                             <div class="col-xl-6">
-                                <div class="w-100">...</div>
+                                <div class="w-100"></div>
                             </div>
                         </div>
                         <div class="row">
@@ -233,10 +233,10 @@
         </div>
         <div class="row">
             <div class="col-xl-6">
-                <textarea oninput="mirrorTextSequence(this)" required name="sequenceContent[]" class="w-100" cols="30" rows="10">...</textarea>
+                <textarea oninput="mirrorTextSequence(this)" required name="sequenceContent[]" class="w-100" cols="30" rows="10"></textarea>
             </div>
             <div class="col-xl-6">
-                <div class="w-100">...</div>
+                <div class="w-100"></div>
             </div>
         </div>
         <div class="row">
