--- a/src/main/resources/templates/list-content.html
+++ b/src/main/resources/templates/list-content.html
@@ -174,7 +174,7 @@
                     <div class="row">
                         <div class="col-xl-6">
                             <label>Footer innehåll</label>
-                            <textarea oninput="mirrorText(this)" required name="footerContent" class="w-100" cols="30" rows="10"></textarea>
+                            <textarea oninput="mirrorText(this)" name="footerContent" class="w-100" cols="30" rows="10"></textarea>
                         </div>
                         <div class="col-xl-6">
                             <label></label>
